--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="EXPORTS/MicrowaveDave.exe"
+export_path="../EXPORTS/MicrowaveDave/MicrowaveDave.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -36,9 +36,9 @@ application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
+application/product_version="0.1.0.0"
+application/company_name="DoubleACharge"
+application/product_name="MicrowaveDave"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
@@ -60,9 +60,9 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
-dotnet/include_scripts_content=false
-dotnet/include_debug_symbols=true
-dotnet/embed_build_outputs=false
+dotnet/include_scripts_content=true
+dotnet/include_debug_symbols=false
+dotnet/embed_build_outputs=true
 
 [preset.1]
 
