--- a/MicrowaveDave.csproj
+++ b/MicrowaveDave.csproj
@@ -3,4 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="SCENES\3D Scenes\" />
+  </ItemGroup>
 </Project>
